// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repeater Check basic adding/removing block and attributes changing 1`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"1-3","row-pattern-xl":"1-3","row-pattern-m":"2-2","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":50,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"button-padding-top-xxl":"23","button-padding-top-xl":"15","button-padding-right-xxl":"55","button-padding-right-xl":"36","button-padding-bottom-xxl":"23","button-padding-bottom-xl":"15","button-padding-left-xxl":"55","button-padding-left-xl":"36","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content"></span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":50,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"button-padding-top-xxl":"23","button-padding-top-xl":"15","button-padding-right-xxl":"55","button-padding-right-xl":"36","button-padding-bottom-xxl":"23","button-padding-bottom-xl":"15","button-padding-left-xxl":"55","button-padding-left-xl":"36","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content"></span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check basic adding/removing block and attributes changing 2`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"1-3","row-pattern-xl":"1-3","row-pattern-m":"2-2","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":50,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"button-background-palette-color-general":3,"button-padding-top-xxl":"23","button-padding-top-xl":"15","button-padding-right-xxl":"55","button-padding-right-xl":"36","button-padding-bottom-xxl":"23","button-padding-bottom-xl":"15","button-padding-left-xxl":"55","button-padding-left-xl":"36","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content"></span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":50,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"button-background-palette-color-general":3,"button-padding-top-xxl":"23","button-padding-top-xl":"15","button-padding-right-xxl":"55","button-padding-right-xl":"36","button-padding-bottom-xxl":"23","button-padding-bottom-xl":"15","button-padding-left-xxl":"55","button-padding-left-xl":"36","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content"></span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check basic adding/removing block and attributes changing 3`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"1-3","row-pattern-xl":"1-3","row-pattern-m":"2-2","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":50,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":50,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check block moving with turned on repeater 1`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"4 columns","row-pattern-m":"2-2-2-2","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check block moving with turned on repeater 2`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"4 columns","row-pattern-m":"2-2-2-2","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":25,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi -->

<!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/group-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false} -->
<div class="wp-block-maxi-blocks-group-maxi maxi-block maxi-group-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text in group","text-alignment-general":"left"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Text in group</p></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button in group","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button in group</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/group-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check different structure popup 1`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"3 columns","row-pattern-m":"2-2","max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button 1","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button 1</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button 2","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button 2</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Some text"} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><p class="maxi-text-block__content">Some text</p></div>
<!-- /wp:maxi-blocks/text-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check different structure popup 2`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"3 columns","row-pattern-m":"2-2","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button 1","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button 1</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button 2","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button 2</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button 1","button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button 1</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;

exports[`Repeater Check repeater columns validation on toggle when first column has content 1`] = `
"<!-- wp:maxi-blocks/container-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","width-unit-l":"px","width-l":"1170","width-m":"1000","width-s":"700","width-xs":"460"} -->
<section class="wp-block-maxi-blocks-container-maxi maxi-block maxi-container-block maxi-light"><div class="maxi-background-displayer"><div class="maxi-background-displayer__layer maxi-background-displayer__1"></div></div><!-- wp:maxi-blocks/row-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"row-pattern-general":"1-4-1","row-pattern-m":"1-1-1","repeater-status":true,"max-width-unit-xxl":"px","max-width-unit-xl":"px","max-width-unit-l":"%","max-width-xxl":"1690","max-width-xl":"1170","max-width-l":"90","flex-wrap-general":"wrap"} -->
<div class="wp-block-maxi-blocks-row-maxi maxi-block maxi-row-block maxi-light"><!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","textLevel":"h3","text-alignment-general":"center","palette-color-general":5} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><h3 class="maxi-text-block__content">Text</h3></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-background-palette-color-general":8,"button-background-palette-opacity-general":0.61,"button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","textLevel":"h3","text-alignment-general":"center","palette-color-general":5} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><h3 class="maxi-text-block__content">Text</h3></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-background-palette-color-general":8,"button-background-palette-opacity-general":0.61,"button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi -->

<!-- wp:maxi-blocks/column-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"column-size-general":33.33,"column-size-m":100} -->
<div class="wp-block-maxi-blocks-column-maxi maxi-block maxi-column-block maxi-light"><!-- wp:maxi-blocks/text-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"content":"Text","textLevel":"h3","text-alignment-general":"center","palette-color-general":5} -->
<div class="wp-block-maxi-blocks-text-maxi maxi-block maxi-text-block maxi-light"><h3 class="maxi-text-block__content">Text</h3></div>
<!-- /wp:maxi-blocks/text-maxi -->

<!-- wp:maxi-blocks/button-maxi {"maxi-version-current":"2.1.8","maxi-version-origin":"2.1.8","blockStyle":"light","isFirstOnHierarchy":false,"buttonContent":"Button","button-background-palette-color-general":8,"button-background-palette-opacity-general":0.61,"button-padding-top-xxl":"23","button-padding-right-xxl":"55","button-padding-bottom-xxl":"23","button-padding-left-xxl":"55","button-padding-sync-xxl":"axis"} -->
<div class="wp-block-maxi-blocks-button-maxi maxi-block maxi-button-block maxi-light"><button type="button" class="maxi-components-button components-button maxi-button-block__button"><span class="maxi-button-block__content">Button</span></button></div>
<!-- /wp:maxi-blocks/button-maxi --></div>
<!-- /wp:maxi-blocks/column-maxi --></div>
<!-- /wp:maxi-blocks/row-maxi --></section>
<!-- /wp:maxi-blocks/container-maxi -->"
`;
